Fixed the footer not showing in the correct place on bigger monitors, and added a hamburger menu for the navbar items for when the screen gets too small

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,9 +1,3 @@
-.footer {
-  bottom: 0;
-  width: 100%;
-  height: 110px;
-}
-
 #email {
   font-size: 20px;
 }
